# simplehttp

./: CHANGES.txt  CMakeLists.txt  README.md  cleancmake.sh  cmake_for_linux.sh  cmake_for_mingw_win32.sh  mktags.sh  mktargz.sh  toolchain-generic-linux.cmake  toolchain-i686-w64-mingw32.cmake
simplehttp/: CMakeLists.txt  SimpleHttp.cpp  SimpleHttp.hpp
test/: CMakeLists.txt  test_simplehttp.cpp
